# testes

./: .gitignore  database.db  pyproject.toml  text.txt
fast_zero/: app.py  database.py  models.py  schemas.py  settings.py  test_app.py
migrations/: env.py
migrations/versions/: bd4269d7c033_create_users_table.py
tests/: conf_test.py  conftest.py  test_app.py  test_db.py
