[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandre Magno",email = "alexandremg2374@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']
[tool.ruff.lint]
preview=true 
select= ['I', 'F','E','W','PL','PT']
[tool.ruff.format]
preview=true
quote-style= 'single'

[tool.pytest.ini_options]
pythonpath= "."
addopts= '-p no:warnings'

[tool.taskipy.tasks]
lint= 'ruff check'